# auto-cv-train-optimization-claude_code

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/agents/: bbox-labeler.md  data-hunter.md  hp-optimizer.md  inference-runner.md  training-runner.md
.github/workflows/: ci.yml
configs/: template.yaml  wafer.yaml
docs/: architecture.md
docs/results/: summary.md
examples/wafer/: README.md
scripts/: README.md  record_demo.py
src/autocv/: __init__.py  __main__.py  cli.py  config.py  data.py  device.py  infer.py  optimize.py  split.py  train.py
src/autocv/server/: __init__.py  app.py  events.py  real_stages.py  runner.py
src/autocv/server/static/: index.html
tests/: test_cli.py  test_config.py  test_device.py  test_server.py  test_split_validate.py
